Coverity analysis defect 30204: Uninitialized scalar field

XMLWordPrintableJSON

    • Fully Compatible
    • ALL
    • Execution Team 2020-09-07
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      Uninitialized scalar field

      The field will contain an arbitrary value left over from earlier computations. A scalar field is not initialized by the constructor
      /src/mongo/db/storage/storage_options.h:125: UNINIT_CTOR 30204 Class member declaration for "disableLockFreeReads".
      /src/mongo/db/storage/storage_options.cpp:41: UNINIT_CTOR 30204 Non-static class member "disableLockFreeReads" is not initialized in this constructor nor in any functions that it calls.

            Assignee:
            Dianna Hohensee (Inactive)
            Reporter:
            Coverity Collector User
            Votes:
            0 Vote for this issue
            Watchers:
            0 Start watching this issue

              Created:
              Updated:
              Resolved: