SERVER-50237 Initialize StorageGlobalParams::disableLockFreeReads boolean