src/mongo/db/storage/storage_options.cpp
@@ -56,6 +56,8 @@ void StorageGlobalParams::reset() {
     readOnly = false;
     groupCollections = false;
     oplogMinRetentionHours.store(0.0);
+    allowOplogTruncation = true;
+    disableLockFreeReads = true;
 }
 
 StorageGlobalParams storageGlobalParams;
