src/mongo/db/storage/storage_options.h
@@ -117,7 +117,7 @@ struct StorageGlobalParams {
     AtomicWord<double> oplogMinRetentionHours;
 
     // Controls whether we allow the OplogStones mechanism to delete oplog history on WT.
-    bool allowOplogTruncation = true;
+    bool allowOplogTruncation;
 
     // Disables lock-free reads, adjustable via setParameter. Can be disabled by certain user
     // settings with which lock-free reads are incompatible: standalone mode; and
